Tabbar : fixed tabbar with title layout bugs

--- a/tau/src/css/profile/mobile/changeable/common/jquery.mobile.tizen.tabbar.less
+++ b/tau/src/css/profile/mobile/changeable/common/jquery.mobile.tizen.tabbar.less
@@ -113,6 +113,8 @@
 		height: 45 * @unit_base;
 		margin-top: 7 * @unit_base;
 		margin-bottom: 7 * @unit_base;
+		max-width: none;
+		float: none;
 	}
 	.ui-tabbar {
 		height : 38 * @unit_base;
